# py-hbs-ads

./: .env.example  .gitignore  15-REVIEW-SUMMARY.md  AGENTS.md  hbs-ads.yaml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-ROADMAP.md
config/notion_scrum/: board_config.example.json
docs/: architecture.md  migration.md  operator_guide.md  parity_matrix.md  python_dev.md
docs/agent/: AGENT_CAPABILITIES.md  README.md  SETUP_GUIDE.md  STAFFING_AND_PEOPLE_STATE.md  analysis-agent.md  assembly-agent.md  delegation-contracts.md  execution-modes.md  hermes-discord-notion-scrum-prd-2026-04-20.md  hermes-discord-notion-scrum-skill-spec.md  hermes-discord-notion-scrum-staffing-prd-2026-04-24.md  hermes-discord-notion-scrum-state-schema.md  (+19 more)
scripts/: notion_media_scrum_audit.py  rebuild-graphify.sh
tests/: test_board_config.py  test_cli.py  test_foundations.py  test_notion_scrum.py  test_notion_scrum_board_cache.py  test_notion_scrum_daily_board_report.py  test_notion_scrum_people_state.py  test_notion_scrum_preflight.py  test_notion_scrum_query_people_state.py  test_notion_scrum_resolve_prepare_apply_patch.py  test_notion_scrum_resolve_prepare_patch.py  test_notion_scrum_staffing_risk.py  test_notion_scrum_staffing_snapshot.py  test_notion_scrum_templates.py  test_notion_scrum_update_by_title.py  test_notion_scrum_update_people_state.py  test_notion_scrum_wrappers.py  test_outputs.py  test_phase6_parity.py  test_workflows.py
(+185 files in other folders)
