[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hbs-ads"
version = "0.1.0"
description = "Feature-first Python rewrite of the hbs-ads ad operations CLI."
readme = "docs/architecture.md"
requires-python = ">=3.12"
authors = [
  { name = "brewuser" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
hbs-ads = "hbs_ads.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
